# GPGP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  volume_grid_scalar_quantity.cpp
apps/: showcase.cpp  soupify.cpp
cmake/: polyscope.cmake  spdlog.cmake  spectra.cmake
data/: macaca_high_variance.gdp  macaca_low_variance.gdp  spot_high_variance.gdp  spot_low_variance.gdp  spot_low_variance2.gdp
data/QMC/: QMC2D.inc  QMC3D.inc
src/: BarnesHuttSPSR.cpp  BarnesHuttSPSR.h  GaussianPointCloud.cpp  GaussianPointCloud.h  Grid.cpp  Grid.h  HamiltonianFastMarching.cpp  HamiltonianFastMarching.h  Mesh.h  MeshSampling.cpp  MeshSampling.h  NarrowBand.cpp  NarrowBand.h  Plot.h  PointCloud.h  QMC.cpp  QMC.h  SGPWrapper.cpp  SGPWrapper.h  SellingsAlgorithm.cpp  SellingsAlgorithm.h  StochasticAPSS.cpp  StochasticAPSS.h  StochasticBarnesHutt.cpp  StochasticBarnesHutt.h  StochasticCalculus.cpp  StochasticCalculus.h  StochasticGeometryProcessing.h  StochasticPoissonSurfaceReconstruction.cpp  StochasticPoissonSurfaceReconstruction.h  Tensor.h  gaussians.cpp  gaussians.h  sampling.h  types.h  utils.cpp  utils.h
